Ensure the xcb connection gets flushed before the event dispatcher blocks

This is a workaround for Qt versions which do not yet have the change
https://codereview.qt-project.org/85654

It is important to have this workaround as applications can get stalled
when a framework uses xcb and doesn't flush the connection manually.

BUG: 334858
REVIEW: 118234