src/platformtheme/main.cpp
@@ -22,6 +22,14 @@
 
 #include "kdeplatformtheme.h"
 
+#include <config-platformtheme.h>
+#if HAVE_X11
+#include <QCoreApplication>
+#include <QAbstractEventDispatcher>
+#include <QX11Info>
+#include <xcb/xcb.h>
+#endif
+
 class KdePlatformThemePlugin : public QPlatformThemePlugin
 {
     Q_OBJECT
@@ -34,8 +42,33 @@ public:
     {
         Q_UNUSED(key)
         Q_UNUSED(paramList)
+        // Must be done after we have an event-dispatcher. By posting a method invocation
+        // we are sure that by the time the method is called we have an event-dispatcher.
+        QMetaObject::invokeMethod(this, "setupXcbFlush", Qt::QueuedConnection);
         return new KdePlatformTheme;
     }
+
+public Q_SLOTS:
+    void setupXcbFlush();
 };
+
+void KdePlatformThemePlugin::setupXcbFlush()
+{
+#if HAVE_X11
+    // this is a workaround for BUG 334858
+    // it ensures that the xcb connection gets flushed before the EventDispatcher
+    // is going to block. Qt does not guarantee this in all cases.
+    // For Qt this issue is addressed in https://codereview.qt-project.org/85654
+    // TODO: remove again once we depend on a Qt version with the patch.
+    if (!QX11Info::isPlatformX11()) {
+        return;
+    }
+    connect(QCoreApplication::eventDispatcher(), &QAbstractEventDispatcher::aboutToBlock,
+        []() {
+            xcb_flush(QX11Info::connection());
+        }
+    );
+#endif
+}
 
 #include "main.moc"
